fix(components/datatable): increase z-index value on sticky variation (#1586)

--- a/packages/styles/components/_c.datatable.scss
+++ b/packages/styles/components/_c.datatable.scss
@@ -169,7 +169,7 @@
           @include set-box-shadow("l");
 
           top: 0;
-          z-index: 2;
+          z-index: 3;
         }
       }
 
@@ -187,7 +187,7 @@
       &__footer {
         border-top: get-border(s) solid $color-grey-300;
         position: relative;
-        z-index: 2;
+        z-index: 3;
       }
     }
   }
